--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-h1 {
-  text-align: center;
-}
-
-label {
-  background-color: lightblue;
-  text-align: left !important;
+.gameOver {
+  display: none;
 }
