reorganize html to show players side by side and give them their own roll button

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
-.gameOver {
+.gameOver, #player1roll, #player2roll {
   display: none;
+}
+
+.score {
+  font-size: 48px;
+  background-color: lightblue;
 }
